--- a/package.json
+++ b/package.json
@@ -16,6 +16,6 @@
   },
   "scripts": {
     "build": "node esbuild.mjs",
-    "zip": "cd dist && bestzip ../out.zip ./*"
+    "zip": "cd dist && bestzip ../dist.zip *"
   }
 }
